--- a/sass/core/_colors.sass
+++ b/sass/core/_colors.sass
@@ -3,12 +3,46 @@
 @import "compass/utilities/general/hacks"
 @import "compass/css3/images"
 
+// COLOR              TOP     BOTTOM
+
+// Black          -   #7d7e7d   #0e0e0e
+// Black:hover    -   #9b9b9b   #3d3d3d
+
+// grey           -   #ffffff   #e5e5e5
+// grey:hover     -   #ffffff   #b7b7b7
+
+// blue           -   #a7cfdf   #23538a
+// blue:hover     -   #a7cfdf   #004089
+
+// red            -   #ff3019   #cf0404
+// red:hover      -   #ff3819   #aa0303
+
+// yellow         -   #fced62   #febf04
+// yellow:hover   -   #fced62   #ffaa00
+
+// orange         -   #ffa84c   #ff7b0d
+// orange:hover   -   #ffa84c   #fc6000
+
+// green          -   #a4b357   #75890c
+// green:hover    -   #a4b357   #5b7a00
+
+
+// Base Colors
+$default: rgba(#333333, 1.0)
+$text-color: rgba(#555555, 1.0)
+
+$white: rgba(#FFFFFF, 1.0)
+$black: rgba(#000000, 1.0)
+$red: #ff3019
+$yellow: #febf04
+$blue: #a7cfdf
+$green: #a4b357
+
 
 // Two color gradient - supplied by compass
 // @include gradient-two(#1, #2)
 @mixin gradient-two($start, $end)
   $experimental-support-for-svg: false
-  background-color: $end
   @include background-image(linear-gradient($start, $end))
 
 
