--- a/sass/core/_typography.sass
+++ b/sass/core/_typography.sass
@@ -1,6 +1,8 @@
 @import "compass/typography/text/"
 @import "vars"
 
+
+
 //@mixin default-heading($color, $size)
 //  color: $color
 //  display: block
@@ -20,6 +22,19 @@
 //  font-weight: normal
 //  margin: 10px 0
 
+// Margin
+$dh-margin: 1em 0
+$dw-margin: 0 1em
+$d-margin: 1em
+$no-margin: 0
+$b-margin: 0 0 1em 0
+
+// Padding
+$dh-padding: 1em 0
+$dw-padding: 0 1em
+$d-padding: 1em
+$no-padding: 0
+$b-padding: 0 0 1em 0
 
 body
   font-size: $body-font-size
@@ -86,9 +101,4 @@ body
 
   @include links
   @include default-list
-  
-  .caption
-    color: $lightgrey
-    font-size: $default-font-size - 0.2
-    
 
