Updated framework to include support for IE7 box-sizing issues and support for right-to-left languages

--- a/sass/centurion-rtl.sass
+++ b/sass/centurion-rtl.sass
@@ -1,13 +1,16 @@
 @import "core/base"
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.2
+ *  Centurion Framework v 3.2 - Right-to-Left Stylesheet
  *  Created by: Justin Hough
  *
  *  Documentation: http://jhough10.github.com/Centurion/documentation.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
+
+$lang-front: right
+$lang-back: left
 
 %show-block
   display: block
