--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -37,7 +37,7 @@
     margin-right: auto
     
   %float-left
-    float: left
+    float: $lang-front
   
   %float-right
-    float: right
+    float: $lang-back
