--- a/sass/core/_vars.sass
+++ b/sass/core/_vars.sass
@@ -43,7 +43,7 @@ $border-color-light: rgba(#EDEDED, 1.0)
     margin-right: auto
     
   %float-left
-    float: left
+    float: $lang-front
   
   %float-right
-    float: right
+    float: $lang-front
